---------------------------------------------------------------------------------------------------
Version: 2.0.11
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.0.10
Date: 2025-07-06
  Features:
    - Add "Range for long inserters" map setting to define how range technologies affect inserters which inherently have longer range
  Changes:
    - Update support for Smart Inserter's "Max range of each inserter" setting, matching its behavior
    - Changed how "incremental" from Smart Inserter's setting is handled. QAI had explicitly different logic, they match now
---------------------------------------------------------------------------------------------------
Version: 2.0.9
Date: 2025-06-28
  Bugfixes:
    - Fix long inserters 1 and 2 not actually increasing range
---------------------------------------------------------------------------------------------------
Version: 2.0.8
Date: 2025-06-28
  Changes:
    - Add 'bob-' prefix to internal technology names to prevent creating duplicate technologies when bobs inserters is also enabled
    - Exclude all inserters from https://mods.factorio.com/mod/miniloader-redux using the pattern "^hps__ml%-"
---------------------------------------------------------------------------------------------------
Version: 2.0.7
Date: 2025-05-01
  Minor Features:
    - Add on_qai_inserter_direction_changed event for other mods to listen to
    - Add on_qai_inserter_vectors_changed event for other mods to listen to
    - Add on_qai_inserter_adjustment_finished event for other mods to listen to
---------------------------------------------------------------------------------------------------
Version: 2.0.6
Date: 2025-04-26
  Bugfixes:
    - Fix the data_api ignore feature straight up not doing anything
---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: 2025-04-26
  Minor Features: