@@ -49,6 +49,7 @@ qai-about-smart-inserters=About Smart Inserters
 qai-range-for-long-inserters-retract-then-extend=Retract then extend
 qai-range-for-long-inserters-extend-only=Extend only
 qai-range-for-long-inserters-extend-only-without-gap=Extend only, without gap
+qai-range-for-long-inserters-retract-only=Retract only
 # I'm so sorry to anyone who looks at this trying to translate it. Just uh, have fun with it, this isn't meant
 # to be serious, the locale keys don't have to match up with the value at all for example.
 qai-about-smart-inserters-got-it=Got it
@@ -80,6 +81,7 @@ qai-about-smart-inserters-affirmative=Affirmative
 qai-range-for-long-inserters-retract-then-extend=Adjustable range will first increase inwards until there is no gap between the inserter base and its reachable tiles, at which point the adjustable range will extend outwards.
 qai-range-for-long-inserters-extend-only=Adjustable range will only extend outwards, leaving a gap between the inserter base and its reachable tiles even with all range technologies researched.\nWith vanilla and 3 range this causes long handed inserters to be able to reach over beacons and machines which is quite a big difference.
 qai-range-for-long-inserters-extend-only-without-gap=Adjustable range will only extend outwards, however all tiles from the inserter base to the adjustable range will also be reachable.\nWith vanilla and 3 range this causes long handed inserters to be able to reach over beacons and machines which is quite a big difference.
+qai-range-for-long-inserters-retract-only=Adjustable range will only increase inwards until there is no gap between the inserter base and its reachable tiles. Further range technologies will not have any effect.
 
 [mod-setting-description]
 qai-near-inserters=Should the Near inserters technology exist to allow adjusting the drop position within a tile?
