@@ -2,6 +2,7 @@
 Version: 2.0.11
 Date: ????
   Changes:
+    - Add "Retract Only" to "Range for long inserters" map setting
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.10
 Date: 2025-07-06
